fix: align categories & projects with header

--- a/src/components/Home/HomeSections/1-categories/Categories.styles.scss
+++ b/src/components/Home/HomeSections/1-categories/Categories.styles.scss
@@ -1,6 +1,6 @@
 // MOBILE FIRST
 
-.fondo {
+.background {
   background-color: var(--lightGray);
 }
 
@@ -70,19 +70,6 @@
 @media (min-width: 480px) {
   .container {
     padding: 0;
-  }
-
-  .section1 {
-    .section1-title {
-      margin-top: 8%;
-      h2 {
-        width: 90%;
-        font-size: 40px;
-      }
-    }
-    .section1-sections {
-      margin-top: 8%;
-    }
   }
 }
 @media (min-width: 769px) {
