--- a/src/components/Home/HomeSections/2-projects/Projects.styles.scss
+++ b/src/components/Home/HomeSections/2-projects/Projects.styles.scss
@@ -1,7 +1,10 @@
-#Projects {
-  width: 100%;
-  margin: auto;
+.background {
   background-color: var(--lightGray);
+}
+
+#Projects {
+  width: 90%;
+  margin: auto;
 }
 
 .more-projects {
@@ -9,28 +12,8 @@
   text-decoration: none;
   display: block;
   margin: 80px 0;
-  margin-left: 15px;
-}
 
-.more-projects:hover {
-  color: var(--pinkHover);
-}
-
-// MEDIA QUERIES
-@media (min-width: 768px) {
-  .more-projects {
-    margin-left: 5%;
-  }
-}
-
-@media (min-width: 1280px) {
-  .more-projects {
-    margin-left: 6.3%;
-  }
-}
-
-@media (min-width: 1920px) {
-  .more-projects {
-    margin-left: 16%;
+  &:hover {
+    color: var(--pinkHover);
   }
 }
